<resources>
    <string name="app_name">Andro-Socio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_login">Login</string>
    <string name="menu_registration">Registration</string>
    <string name="login">Login</string>
    <string name="signup">Don\'t have an account? Sign Up</string>
    <string name="version">Version</string>
    <string name="enter_mpin_4_digit_number">Enter mPin (4 digit number)</string>
    <string name="enter_phone_number">Please enter phone number.</string>
    <string name="phone_number_digits">Phone number must be 10 digits.</string>
    <string name="mpin_enter">Please enter mPin number.</string>
    <string name="mpin_digit_validation">mPin must be 4 digits</string>
    <string name="select_sub_role">Please select sub role</string>
    <string name="enter_name">Please enter your name</string>
    <string name="select_gender">Please select gender</string>
    <string name="splash_icon">splash icon</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="m_pin_4_digit_number">M-Pin (4 Digit Number)</string>
    <string name="select_role">Select Role</string>
    <string name="user">User</string>
    <string name="police_municipal_officer">Police/Municipal Officer</string>
    <string name="select_sub_role_title">Select Sub Role</string>
    <string name="police">Police</string>
    <string name="municipal_officer">Municipal Officer</string>
    <string name="personal_info">Personal Info</string>
    <string name="select_user_type">Select User Type</string>
    <string name="general">General</string>
    <string name="anonymous">Anonymous</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="gender">Gender</string>
    <string name="select_gender_text">Select gender</string>
    <string name="signup_text">SignUp</string>
    <string name="processing_wait">Processing please wait.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">No internet connection.</string>
    <string name="select_city">Select City</string>
    <string name="select_city_header">Select City</string>
    <string name="select_city_alert">Please select city</string>
    <string name="admin_dashboard_title">Admin Dashboard</string>
    <string name="mn_officer_dashboard_title">Municipal Officer Dashboard</string>
    <string name="police_dashboard_title">Police Dashboard</string>
    <string name="user_dashboard_title">User Dashboard</string>
    <string name="active_users_title">Active Users</string>
    <string name="settings_title">Settings</string>
    <string name="admin_settings_title">Admin Settings</string>
    <string name="user_settings_title">User Settings</string>
    <string name="police_settings_title">Police Settings</string>
    <string name="municipal_officer_settings_title">Municipal Officer Settings</string>
    <string name="add_new_city_title">Add New City</string>

    <string name="canceling_permission_not_granted">Cancelling, required permissions are not granted</string>
    <string name="permission_mandatory_alert">Some core functions of the app might not work correctly without these permissions. Please ALLOW them in app settings</string>
    <string name="create_complaint_issue">Create Issue / Complaint</string>
    <string name="view_complaints">View Complaints</string>
    <string name="view_municipal_issues">View Municipal Issues</string>

    <string name="mn_officer_btn_second_option">My City Issues</string>
    <string name="mn_officer_btn_third_option">City Wise Issues</string>

    <string name="transaction_complaint_or_issue_photo" translatable="false">photo</string>
    <string name="transaction_complaint_or_issue_header" translatable="false">header</string>
    <string name="city_wise_complaints_header">City Wise Complaints</string>
    <string name="my_city_complaints_header">My City Complaints</string>
    <string name="my_issue_or_complaints_ttl">My Issues / Complaints</string>

    <string name="no_address_found">Address not found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="title_activity_maps">Map</string>

    <string name="google_maps_api">AIzaSyAUC8qwlWKzruJW3XEgTHI7SrIzI6-wd5Q</string>
    <string name="andro_socio_admin_text">Andro-Socio Admin</string>
    <string name="issue_access_type_title">Issue Access Type</string>
    <string name="complaint_access_type_header">Complaint Access Type</string>
    <string name="complaint_access_type_not_allowed_to_update">Complaint access type can\'t allow to update</string>
    <string name="dont_have_issue_access_type">You don\'t have permission to update Issue access type.</string>
    <string name="select_access_type">Select Access Type</string>
</resources>