<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    app:layout_scrollFlags="scroll"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background_four">

        <TextView
            android:id="@+id/text_andro_socio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="@dimen/std_160_dp"
            android:gravity="center_horizontal|bottom"
            android:text="ANDRO-SOCIO"
            android:textColor="@color/colorWhite"
            android:textSize="45sp"
            android:fontFamily="@font/lora_bold"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_crime_reporting_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal|bottom"
            android:text="Crime Reporting App"
            android:fontFamily="@font/lora_bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/std_26_sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_andro_socio" />


        <EditText
            android:id="@+id/edit_mobile_number"
            style="@style/Theme.AndroSocio.TILEditText1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/std_40_dp"
            android:layout_marginStart="@dimen/std_20_dp"
            android:layout_marginTop="@dimen/std_100_dp"
            android:layout_marginEnd="@dimen/std_20_dp"
            android:background="@drawable/text_border"
            android:drawableEnd="@drawable/ic_mobile_two"
            android:fontFamily="@font/lora_regular"
            android:drawableRight="@drawable/ic_mobile_two"
            android:gravity="start|center"
            android:hint="@string/enter_mobile_number"
            android:inputType="number"
            android:maxLength="10"
            android:nextFocusForward="@+id/edit_password"
            android:paddingStart="@dimen/std_10_dp"
            android:paddingEnd="@dimen/std_10_dp"
            android:paddingRight="@dimen/std_10_dp"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_crime_reporting_app" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_mPin_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/std_40_dp"
            android:layout_marginTop="@dimen/std_20_dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_mobile_number"
            app:passwordToggleDrawable="@drawable/password_visibility_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorNewUxLightGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_mPin"
                style="@style/Theme.AndroSocio.TILEditText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/text_border"
                android:digits="0123456789"
                android:gravity="start|center"
                android:fontFamily="@font/lora_regular"
                android:hint="@string/enter_mpin_4_digit_number"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:paddingStart="@dimen/std_10_dp"
                android:paddingEnd="@dimen/std_10_dp"
                android:paddingRight="@dimen/std_10_dp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/std_16_sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/std_50_dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/std_20_dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_all_radius_rounded_deep_corner"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="true"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/std_18_sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_mPin_layout" />

        <TextView
            android:id="@+id/text_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal|bottom"
            android:text="@string/signup"
            android:fontFamily="@font/lora_regular"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/text_version"
            android:layout_width="325dp"
            android:layout_height="@dimen/std_40_dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal|bottom"
            android:hint="@string/version"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/lora_regular"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_signup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>